Source/WebCore/dom/Document.cpp
@@ -4916,6 +4916,7 @@ void Document::fullScreenChangeDelayTimerFired(Timer<Document>*)
 
 void Document::fullScreenElementRemoved()
 {
+    setContainsFullScreenElementRecursively(m_fullScreenElement->parentElement() ? m_fullScreenElement->parentElement() : ownerElement(), false);
     webkitCancelFullScreen();
 }
 
